fix: Layout - cambio de title

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 const {
-	title = 'Pila | Finanzas personales simples',
+	title = 'pila',
 	description = 'Pila presenta la forma más clara de ordenar tus finanzas personales.',
 } = Astro.props;
 ---
