--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -5,7 +5,9 @@ import logo from '../assets/logo_pila_blanco.png';
 <header class="top-bar">
   <div class="top-bar__inner">
     <div class="top-bar__logo">
-      <img src={logo.src} alt="Logo Pila" loading="eager" decoding="async" fetchpriority="high" />
+      <a href="/">
+        <img src={logo.src} alt="Logo Pila" loading="eager" decoding="async" fetchpriority="high" />
+      </a>
     </div>
   </div>
 </header>
