--- a/src/components/FooterSection.astro
+++ b/src/components/FooterSection.astro
@@ -18,7 +18,7 @@ const { year } = Astro.props as Props;
     </p>
     <div class="site-footer__links">
       <a href="/terminos">Términos y Condiciones</a>
-      <a href="mailto:hola@pila.app">Contáctanos: hola@pila.app</a>
+      <a href="mailto:hola@pila.ar">Contáctanos: hola@pila.ar</a>
     </div>
   </div>
 </footer>
